can draw and erase

--- a/index.html
+++ b/index.html
@@ -5,8 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Paper</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>hello world!</h1>
+    <canvas id="paper" width=600 height=600></canvas>
+    <div id="actions" class="actions">
+        <button id="eraser">Eraser</button>
+        <button id="brush">Pancel</button>
+    </div>
+    <script src="main.js"></script>
 </body>
 </html>
