--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <canvas id="paper" width=600 height=600></canvas>
+    <canvas id="paper"></canvas>
     <div id="actions" class="actions">
         <button id="eraser">Eraser</button>
         <button id="brush">Pancel</button>
